text in bio with scroll inside element

--- a/css/font_instances.css
+++ b/css/font_instances.css
@@ -5,6 +5,7 @@
   /* font-variation-settings: "wdth" 122, "wght" 40; */
   font-weight: 40;
   font-width: 122;
+  /* font-variation-settings: "wdth" 122, "wght" 40; */
 }
 
 @font-face {
