--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,13 @@ body{
   color: var(--title-color);
   height: 100vh;
   overflow: hidden;
-  /* cursor: url('../dotcursor.svg'), auto; */
 }
 
+
+a {
+  color: var(--title-color);
+  text-decoration-thickness: from-font;
+}
 
 /* Setting container to flex and width to 80% of view port */
 .mainContainer{
@@ -33,7 +37,6 @@ body{
 }
 
 .tabTitle{
-  /* font-family: 'Sprat'; */
   font-family: 'Lincoln';
   writing-mode: vertical-lr;
   font-size: 6vh;
@@ -42,7 +45,6 @@ body{
   overflow: hidden;
 }
 
-/*Adding background image to each section*/
 .one{
   /* background-color: red; */
 }
@@ -63,9 +65,7 @@ body{
 .section{
     display: flex;
     flex-direction: row;
-    /* cursor: pointer; */
     flex: 0.2; /* also attends to min flex*/
-    /* margin:4px; */
     position: relative;
     transition: all 0.7s ease-out;
 }
@@ -96,6 +96,7 @@ body{
   font-family: 'Sprat';
   font-variation-settings: "wdth" 122, "wght" 40;
   overflow: auto;
+  /* TODO attened to transition */
 }
 
 .section:not(.active)>.tabSection{
@@ -103,17 +104,20 @@ body{
   display: none;
 }
 
-#bio{
+.bioclass{
   width: 45vw;
   font-size: 2.5vh;
+}
+
+.bioclass::after{
+  content: "";
+	display: block;
+  padding-bottom: 3rem;
 }
 
 #bio_links{
   font-family: 'Lincoln';
   font-size: 5vh;
-  width: 45vw;
-  /* font-size: 2.5vh; */
-  text-decoration: none;
 }
 
 /* unvisited link */
@@ -128,20 +132,31 @@ body{
 /* mouse over link */
 #bio_links a:hover {
   text-decoration: underline;
-
-  /* box-shadow: inset 500px 0 0 0.09px var(--title-color);
-  color: var(--bg-color);
-  color: var(--title-color);
-  -webkit-text-stroke: 1.5px var(--bg-color); */
-
   color: var(--bg-color);
   -webkit-text-stroke: 1.5px var(--title-color);
+
+    /* box-shadow: inset 500px 0 0 0.09px var(--title-color);
+    color: var(--bg-color);
+    color: var(--title-color);
+    -webkit-text-stroke: 1.5px var(--bg-color); */
 }
 
-/* selected link */
-/* #bio_links a:active {
-} */
+@supports not(-webkit-text-stroke: 2px var(--bg-color)) {
+  a:hover {
+    text-shadow:
+      3px 3px 0 var(--title-color),
+      -1px -1px 0 var(--title-color),
+      1px -1px 0 var(--title-color),
+      -1px 1px 0 var(--title-color),
+      1px 1px 0 var(--title-color);
+  }
+}
 
-/* visited link */
-/* #bio_links a:visited {
-} */
+h3 {
+  font-family: 'Lincoln';
+  font-size: 5vh;
+  margin-bottom: 0;
+}
+
+#bio_colophon{
+}
